selfhost/test/typechecker/invocation/error_variadic_generic_type_mismatch.out
Error at %FILE_NAME%:6:8
Type mismatch for parameter 'b'
  |  foo(1, "a")
            ^
Expected: Int
but instead found: String
