selfhost/test/typechecker/invocation/error_variadic_generic_type_mismatch.abra
// Test generic variadic arguments
func foo<T>(a: T, *b: T[]) {
  val _: T[] = b
}

foo(1, "a")
